# docs/swagger.json
@@ -5152,11 +5152,13 @@
         "schema.SessionNameType": {
             "type": "integer",
             "enum": [
+              0,
                 1,
                 2
             ],
             "x-enum-varnames": [
-                "SessionNameTypeWIP",
+              "SessionNameTypeNone",
+              "SessionNameTypeTemp",
                 "SessionNameTypeSystem"
             ]
         },
